--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -1,10 +1,8 @@
 .header__container {
   background: #eee;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
   height: 5rem;
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
