--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,12 +6,11 @@
 
 html,
 body {
-  /* padding: 0;
-  margin: 0; */
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-family: "Space Grotesk", sans-serif;
-  position: relative;
+  padding: 0;
+  margin: 0;
+  font-family: "Space Grotesk", -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
   text-align: center;
 }
 
